# notebooks_mareuter

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yaml  mypy.yaml  py-formatting.yaml
notebooks/base-teststand/auxtel/: MakePlaylists.ipynb
notebooks/base-teststand/lsstcam/: MakePlaylists.ipynb
notebooks/general/AuxTel/: CheckHeader.ipynb  CreateFingerprint.ipynb  FindFingerprint.ipynb
notebooks/general/CSC/: Handle_CalSys.ipynb  Handle_ComCam.ipynb  Handle_ESS.ipynb  Handle_LSSTCam.ipynb  Handle_ObsSys.ipynb
notebooks/general/ComCam/: CheckHeader.ipynb  CreateFingerprint.ipynb  FindFingerprint.ipynb
notebooks/general/Diagnostics/: CSC_AckCmd.ipynb  CameraSequencing.ipynb  EfdDiagnostics.ipynb  EfdDiagnostics2.ipynb  Script_Log.ipynb
notebooks/general/DomeSeeing/: DSM_Report.ipynb
notebooks/general/Electrometer/: PlotCurve.ipynb
notebooks/general/FiberSpectrograph/: Run_FS.ipynb
notebooks/general/GenCam/: CommandGenCam.ipynb  MonitorGenCamEvents.ipynb  MonitorGenCamHB.ipynb  PlotImage.ipynb  StarTrackerOps.ipynb  TakeImages.ipynb
notebooks/general/LSSTCam/: CheckHeader.ipynb  CommandLSSTCam.ipynb  ShowFocalPlane.ipynb
notebooks/general/OCPS/: Run_OCPS.ipynb
notebooks/general/SimonyiTel/: CommandM1M3TS.ipynb
notebooks/summit/: Example_Notebook.ipynb
notebooks/tucson-teststand/auxtel/: MakePlaylists.ipynb
tests/: test_aws_du_helpers.py  test_header_utils.py  test_method_example.py  test_playlist.py  test_site_efd.py  test_site_lfa.py
ups/: notebooks_mareuter.table
(+20 files in other folders)
