[project]
name = "notebooks_mareuter"
version = "1.0.0"
dependencies = [
    "awscli",
    "fastparquet",
    "jupyter",
    "pandas",
    "papermill",
    "prettytable",
    "tables"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest"
]

[tool.setuptools.packages.find]
where = [ "python" ]

[tool.isort]
profile = "black"
skip = ["__init__.py"]
known_first_party = ["lsst", "lsst.ts"]
force_sort_within_sections = "true"

[tool.mypy]
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
# The following only excludes version.py when running mypy from the command line.
# `--ignore-glob=*/version.py` in `[tool:pytest]` excludes the file from pytest,
# because pytest explicitly specifies each file being tested, and that overrides mypy's exclude.
exclude = ["version.py", "bin/make_ackcmd_translation.py"]
